# cosyn-runtime-wrapper

./: .dockerignore  .env.example  .gitignore  07_GOVERNANCE_GATE_ENGINE_SPEC.md  10_HALT_CONTROLLER_SPEC.md  11_CONFIDENCE_ENFORCER_SPEC.md  14_COMMAND_TRIGGERS_AND_CONTROL_FLAGS.md  15_ARTIFACT_INTEGRITY_ENFORCEMENT_SPEC.md  16_STATE_MODEL_AND_SESSION_SPEC.md  18_OUTPUT_SCHEMA.json  20_ERROR_CODES_AND_HALTS.md  22_ACCEPTANCE_CRITERIA.md  23C_SUB_AGENT_GOVERNANCE_AUDITOR_PROMPT.md  23D_SUB_AGENT_TEST_RUNNER_PROMPT.md  23E_SUB_AGENT_PACKAGER_PROMPT.md  23_BUILDER_AGENT_EXECUTION_PROMPT.md  ARCHITECTURE.md  CANONICAL_CRITICAL_DIRECTIVE_ARTIFACT_GENERATION.md  CANONICAL_RTW_REFERENCE_SOURCE_v1.0.md  CANONICAL_STACK_ARCHITECT_v3.15.0.md  CHECKSUMS.sha256  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL  README.md  cosyn_wrapper_action_list_v2.md  cosyn_wrapper_classifier_specification.md  cosyn_wrapper_gate_specifications.md  cosyn_wrapper_interface_contracts.json  cosyn_wrapper_labeling_schema.json  docker-compose.yml  pyproject.toml  requirements.txt
Knowledge Base/: ARCHITECTURE.md  cosyn-glossary-of-terms-relative-to-governance.md  knowledgebase README.md  origin record.md  system index.md
cgs_runtime_wrapper/: __init__.py
docs/: CHANGELOG.md  ESD_ADDENDUM_ARM.md  TRAS_ALIGNMENT_NOTE.md  tras_prompt_v1_hardened.md
full-build-files/: 00A_AGENT_INSTANTIATION_COMMAND.md  00B_EXECUTION_MODE.md  00_README_BUILD_ORDER.md  01_RTW_BUILD_CONTRACT.md  02_SYSTEM_AUTHORITY_AND_PRECEDENCE.md  03_EXECUTION_PIPELINE_SPEC.md  04_MODULE_SPECIFICATION.md  05_ARTIFACT_LOADER_SPEC.md  06A_SUB_AGENT_ROSTER.md  (+32 more)
(+153 files in other folders)
