[package]
name = "cosyn"
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Agent"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
