[package]
name = "cosyn"
version = "2.0.1"
edition = "2021"
authors = ["OpenClaw Agent"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
eframe = "0.31"

[[bin]]
name = "cosyn-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
